k8s/local/anvil-ethereum-node/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: anvil-ethereum-node
  name: anvil-ethereum-node
  namespace: chicmoz
spec:
  replicas: 1
  selector:
    matchLabels:
      app: anvil-ethereum-node
  strategy: {}
  template:
    metadata:
      labels:
        app: anvil-ethereum-node
    spec:
      containers:
        - image: aztecprotocol/foundry:25f24e677a6a32a62512ad4f561995589ac2c7dc-amd64
          name: anvil-ethereum-node
          resources:
            limits:
              memory: 30Mi
              cpu: 100m
          command:
            - /bin/sh
            - -c
            - |
              anvil -p 8545 --host 0.0.0.0 --chain-id 31337
          ports:
            - name: anvil-port
              containerPort: 8545
              protocol: TCP
status: {}
