k8s/local/anvil-ethereum-node/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: anvil-ethereum-node
  namespace: chicmoz
spec:
  selector:
    app: anvil-ethereum-node
  ports:
    - name: anvil
      protocol: TCP
      port: 8545
      targetPort: anvil-port
