k8s/local/anvil-ethereum-node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-anvil-ethereum-node
  namespace: chicmoz
spec:
  ingressClassName: nginx
  rules:
    - host: eth.sandbox.chicmoz.localhost
      http:
        paths:
          - backend:
              service:
                name: anvil-ethereum-node
                port:
                  name: anvil
            path: /
            pathType: Prefix
status:
  loadBalancer: {}
